@@ -23,35 +23,27 @@
 package SMBConfig;
 
 use base qw(Net::DBus::Object);
+use Net::DBus::Exporter ($Utils::Backend::DBUS_PREFIX);
 use Shares::SMB;
 
-my $OBJECT_NAME = "SMBConfig";
-my $OBJECT_PATH = $Utils::Backend::DBUS_PATH . "/" . $OBJECT_NAME;
+my $OBJECT_NAME = "/SMBConfig";
 
 sub new
 {
-  my $class  = shift;
-  my $self   = $class->SUPER::new ($OBJECT_PATH,
-                                   {
-                                     $OBJECT_NAME => {
-                                       methods => {
-                                         "get" => {
-                                           params  => [],
-                                           returns => [[ "array", [ "struct", "string", "string", "int32", "int32", "int32", "int32"  ]]],
-                                         },
-                                       },
-                                       signals => {
-                                         "changed" => [],
-                                       },
-                                     },
-                                   },
-                                   @_);
+  my $class   = shift;
+  my $service = shift;
+  my $self    = $class->SUPER::new ($service, $OBJECT_NAME);
+
   bless $self, $class;
-  Utils::Monitor::monitor_files (&Shares::SMB::get_distro_smb_file (),
-                                 $self, $OBJECT_NAME, "changed");
+
+#  Utils::Monitor::monitor_files (&Shares::SMB::get_distro_smb_file (),
+#                                 $self, $OBJECT_NAME, "changed");
 
   return $self;
 }
+
+dbus_method ("get", [], [[ "array", [ "struct", "string", "string", "int32", "int32", "int32", "int32" ]]]);
+dbus_signal ("changed", []);
 
 sub get
 {
