@@ -23,36 +23,28 @@
 package TimeConfig;
 
 use base qw(Net::DBus::Object);
+use Net::DBus::Exporter ($Utils::Backend::DBUS_PREFIX);
 use Utils::Backend;
 use Time::TimeDate;
 
-my $OBJECT_NAME = "TimeConfig";
-my $OBJECT_PATH = $Utils::Backend::DBUS_PATH . "/" . $OBJECT_NAME;
+my $OBJECT_NAME = "/TimeConfig";
 
 sub new
 {
-  my $class  = shift;
-  my $self   = $class->SUPER::new ($OBJECT_PATH,
-                                   {
-                                     $OBJECT_NAME => {
-                                       methods => {
-                                         "get" => {
-                                           params  => [],
-                                           returns => [ "int32", "int32", "int32" ],
-                                         },
-                                       },
-                                       signals => {
-                                         "changed" => [],
-                                       },
-                                     },
-                                   },
-                                   @_);
+  my $class   = shift;
+  my $service = shift;
+  my $self    = $class->SUPER::new ($service, $OBJECT_NAME);
+
   bless $self, $class;
-#  Utils::Monitor::monitor_files (&Users::Users::get_files (),
+
+#  Utils::Monitor::monitor_files (&Users::Groups::get_files (),
 #                                 $self, $OBJECT_NAME, "changed");
 
   return $self;
 }
+
+dbus_method ("get", [], [ "int32", "int32", "int32" ]);
+dbus_signal ("changed", []);
 
 sub get
 {
